<resources>
    <string name="app_name">QuickAmbulance</string>
    <string name="looking_for_the_ambulance_app">LOOKING FOR THE AMBULANCE APP?</string>
    <string name="quick_ambulance">QUICK AMBULANCE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ambulance">AMBULANCE</string>
    <string name="hospital">HOSPITAL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_by_hospital">Near by Hospital</string>

    <string name="hospitalt">Hospital</string>
    <string name="logout">logout</string>
    <string name="title_activity_ambulance">Map</string>
    <string name="animal_ambulance">animal_ambulance</string>
</resources>
